fix: add z-index to header to prevent map layer control overlap

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -1,4 +1,6 @@
 header {
+  position: relative;
+  z-index: 1050;
   width: 100%;
   color: $white;
   background-color: $swisscanoe-blue;
